2017-10-26  Fujii Hironori  <Hironori.Fujii@sony.com>

        [GTK][WPE] install-dependencies can't find libapache2-mod-php7.0 on Ubuntu 17.10
        https://bugs.webkit.org/show_bug.cgi?id=178854

        Reviewed by Michael Catanzaro.

        * http/conf/debian-httpd-2.2.conf: Removed.
        * http/conf/debian-httpd-2.4-php7.0.conf: Renamed from LayoutTests/http/conf/debian-httpd-2.4-php7.conf.
        * http/conf/debian-httpd-2.4-php7.1.conf: Copied from LayoutTests/http/conf/debian-httpd-2.4-php7.conf.

2017-01-09  Lucas Forschler  <lforschler@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=166839
        Add php7 support for macOS.
        This patch mirrors the solution that debian uses, by adding a php7 specific apache conf file.

        Reviewed by Alexey Proskuryakov.

        * http/conf/apache2.4-php7-httpd.conf: Added.

2016-12-09  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Fedora also needs a PHP7 config file alternative
        https://bugs.webkit.org/show_bug.cgi?id=165606

        Reviewed by Michael Catanzaro.

        * http/conf/fedora-httpd-2.4-php7.conf: Added.

2017-03-21  Sergio Villar Senin  <svillar@igalia.com>

        All http/ tests with PHP fail in Debian unstable with php7
        https://bugs.webkit.org/show_bug.cgi?id=169913

        Reviewed by Michael Catanzaro.

        The problem is that the configuration file was still checking for php5 instead of php7.

        * http/conf/debian-httpd-2.4-php7.conf:

2017-05-21  Saam Barati  <sbarati@apple.com>

        We incorrectly throw a syntax error when declaring a top level for-loop iteration variable the same as a parameter
        https://bugs.webkit.org/show_bug.cgi?id=171041
        <rdar://problem/32082516>

        Reviewed by Yusuke Suzuki.

        * js/parser-syntax-check-expected.txt:
        * js/script-tests/parser-syntax-check.js:

2017-12-08  Konstantin Tokarev  <annulen@yandex.ru>
