@@ -1129,11 +1129,11 @@ class Port(object):
         return re.sub(r'(?:.|\n)*Server version: Apache/(\d+\.\d+)(?:.|\n)*', r'\1', config)
 
     def _debian_php_version(self):
-        if self._filesystem.exists("/usr/lib/apache2/modules/libphp7.0.so"):
-            return "-php7.0"
-        elif self._filesystem.exists("/usr/lib/apache2/modules/libphp7.1.so"):
-            return "-php7.1"
-        _log.error("No libphp7.x.so found")
+        prefix = "/usr/lib/apache2/modules/"
+        for version in ("7.0", "7.1", "7.2"):
+            if self._filesystem.exists("%s/libphp%s.so" % (prefix, version)):
+                return "-php%s" % version
+        _log.error("No libphp7.x.so found in %s" % prefix)
         return ""
 
     def _darwin_php_version(self):
