@@ -1,3 +1,13 @@
+2018-06-11  Philippe Normand  <pnormand@igalia.com>
+
+        [webkitpy] PHP7.2 support on Debian platforms
+        https://bugs.webkit.org/show_bug.cgi?id=186521
+
+        Reviewed by Michael Catanzaro.
+
+        * Scripts/webkitpy/port/base.py:
+        (Port._debian_php_version): Refactor and add PHP 7.2 version support.
+
 2017-10-26  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [GTK][WPE] install-dependencies can't find libapache2-mod-php7.0 on Ubuntu 17.10
