@@ -1,3 +1,12 @@
+2018-06-11  Philippe Normand  <pnormand@igalia.com>
+
+        [webkitpy] PHP7.2 support on Debian platforms
+        https://bugs.webkit.org/show_bug.cgi?id=186521
+
+        Reviewed by Michael Catanzaro.
+
+        * http/conf/debian-httpd-2.4-php7.2.conf: Added.
+
 2017-10-26  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [GTK][WPE] install-dependencies can't find libapache2-mod-php7.0 on Ubuntu 17.10
